--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <textarea id="jsonInput" placeholder="Paste your JSON here..."></textarea>
         <button id="parseButton">Parse JSON</button>
         <div id="errorMessage" class="error"></div>
-        <div id="jsonTable"></div>
+        <div class="table-wrapper">
+            <div id="jsonTable"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
